fix(test): use project-compatible source reader